--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ numpy
 opencv-python-headless
 pyzxing
 easyocr
+plotly
 supabase
 python-dotenv
 requests
 pytesseract
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
-typing-extensions
-protobuf
+
+# Torch (Cloud 可用的 CPU 版)
+torch==2.0.0
+torchvision==0.15.1
+torchaudio==2.0.1
+
 
